FIXED: appstyle.css .res-field visibility:hidden

--- a/public/stylesheets/appstyle.css
+++ b/public/stylesheets/appstyle.css
@@ -66,8 +66,8 @@
 }
 
 .res-field {
-    display: inherit;
-    /* visibility: hidden; */
+    display: inline;
+    visibility: hidden;
 }
 
 .menu-eval {
